# autosec-uptane

./: .gitignore  README.md  image_cfg_test.toml  pyproject.toml  requirements.txt  test_imagecfg2.toml  test_snapshotcfg.toml  test_targetscfg.toml  test_timestampcfg.toml
exp_metadata/: root.toml  snapshot.toml  target.toml  targets.toml  timestamp.toml
exp_role_cfg/: root.toml  snapshot.toml  targets.toml  timestamp.toml
ftest/: director_repo_auth.pem  director_repo_auth.pub  image_repo_auth.pem  image_repo_auth.pub  rootkey.pem  rootkey.pub  snapshotkey.pem  snapshotkey.pub  targetskey.pem  targetskey.pub  test_image2  test_imagecfg.toml  test_imagecfg2.toml  test_rootcfg.toml  timestampkey.pem  timestampkey.pub
test_targets_dir/: test_image
uptane/: __main__.py  ecu_keys.json  time.py  verify.py
uptane/crypto/: hash.py  sign.py
uptane/error/: general.py  snapshot.py
uptane/repository/: directordb.py  directorepo.py  directorrepo.py  imagerepo.py  inventorydb.py
uptane/roles/: role.py  root.py  snapshot.py  targets.py  timeserver.py  timestamp.py  uptane.py
