[tool.poetry]
name = "uptane"
version = "0.0.1"
description = "autosec uptane demo library"
authors = ["AlfredDaimari <alfreddaimari77@gmail.com>"]
readme = "README.md"

[tool.pyright]
include = ["./"]
exclude = ["./.venv"]
venvPath = "./"
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.9"
securesystemslib = "^0.24.0"
tuf = "^2.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
