[tool.poetry]
name = "uptane"
version = "0.0.1"
description = "autosec uptane demo library"
authors = ["AlfredDaimari <alfreddaimari77@gmail.com>"]
readme = "README.md"

[tool.pyright]
include = ["./"]
exclude = ["./.venv"]
venvPath = "./"
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.9"
securesystemslib = "^0.24.0"
tuf = "^2.0.0"
pycryptodome = "^3.15.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
Flask = "^2.2.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
